--- a/roles/netdata/tasks/main.yml
+++ b/roles/netdata/tasks/main.yml
@@ -1,7 +1,9 @@
 - name: Install netdata packages
-  apt: name={{ item }} state=installed
-  with_items:
-    - netdata
-  
+  package:
+    name: 
+      - netdata
+    state: present
+    
+ 
   tags:
     - netdata
