--- a/roles/netdata/tasks/main.yml
+++ b/roles/netdata/tasks/main.yml
@@ -3,7 +3,11 @@
     name: 
       - netdata
     state: present
-    
+ 
+ - name: Start service netdata if not started
+  service:
+    name: netdata
+    state: started
  
   tags:
     - netdata
