--- a/ansible.cfg
+++ b/ansible.cfg
@@ -106,6 +106,7 @@ inventory = ~/ansible/hosts
 # default user to use for playbooks if user is not specified
 # (/usr/bin/ansible will use current user as default)
 #remote_user = root
+remote_user = pete
 
 # logging is off by default unless this path is defined
 # if so defined, consider logrotate
