--- a/upgrade.yml
+++ b/upgrade.yml
@@ -1,9 +1,9 @@
 ---
 - name: Upgrades  
   hosts: rpinas
-  remote_user: pete
-  become: "True"
-  become_method: sudo
+  #remote_user: pete
+  #become: "True"
+  #become_method: sudo
 
   roles:
     - updates
