--- a/upgrade.yml
+++ b/upgrade.yml
@@ -18,4 +18,4 @@
         update_cache: yes
         cache_valid_time: 3600
         upgrade: dist
-      when: ansible_distribution == "Ubuntu'  
+      when: ansible_distribution == 'Ubuntu'  
