--- a/roles/hosts/tasks/main.yml
+++ b/roles/hosts/tasks/main.yml
@@ -1,6 +1,7 @@
 - name: Ensure hostname set
   hostname: 
     name: "{{ inventory_hostname }}"
+    use: systemd
   #when: not inventory_hostname|match('(\d{1,3}\.){3}\d{1,3}')
 
 - name: Ensure hostname is in /etc/hosts
