--- a/roles/nfs/tasks/main.yml
+++ b/roles/nfs/tasks/main.yml
@@ -1,3 +1,6 @@
+vars:
+  share_path: /mnt/nfsroot
+
 - name: Install nfs packages
   package:
     name: 
@@ -9,6 +12,19 @@
     name: nfs-server
     enabled: yes
     state: started
+ 
+ - name: configure exports
+      template:
+        src: roles/nfs/files/exports.j2
+        dest: /etc/exports
+      notify: update nfs
+      
+  handlers:
+    - name: update nfs exports
+      command: exportfs -a
+      listen: update nfs
+ 
+ 
  
   tags:
     - nfs
