--- a/roles/nfs/tasks/main.yml
+++ b/roles/nfs/tasks/main.yml
@@ -13,6 +13,12 @@ vars:
     enabled: yes
     state: started
  
+ - name: Create export folder
+   file:
+      path: "{{ share_path }}"
+      state: directory
+ 
+ 
  - name: configure exports
       template:
         src: roles/nfs/files/exports.j2
