--- a/nas.yml
+++ b/nas.yml
@@ -17,4 +17,7 @@
     - cleanup
     - haveged
    
-  
+  - handlers:
+    - name: update nfs exports
+      command: exportfs -a
+      listen: update nfs
