--- a/nas.yml
+++ b/nas.yml
@@ -17,7 +17,7 @@
     - cleanup
     - haveged
    
-  - handlers:
+  handlers:
     - name: update nfs exports
       command: exportfs -a
       listen: update nfs
