--- a/roles/nfs/tasks/main.yml
+++ b/roles/nfs/tasks/main.yml
@@ -17,7 +17,7 @@
 
 - name: configure exports
   template:
-    src: roles/nfs/files/exports.j2
+    src: ~/ansible/roles/nfs/files/exports.j2
     dest: /etc/exports
     notify: update nfs
 
