--- a/roles/nfs/tasks/main.yml
+++ b/roles/nfs/tasks/main.yml
@@ -19,6 +19,9 @@
   template:
     src: ~/ansible/roles/nfs/files/exports.j2
     dest: /etc/exports
+    owner: root
+    group: root
+    mode: 0644
     notify: update nfs
 
 
