--- a/roles/zfs/tasks/main.yml
+++ b/roles/zfs/tasks/main.yml
@@ -14,6 +14,10 @@
  # need to import the zfs pool
  # and share via nfs
  
+ - name: start zfs-share
+   service:
+     name: "zfs-share"
+     state: started
  
   tags:
     - zfs
