--- a/set-hosts.yaml
+++ b/set-hosts.yaml
@@ -1,9 +1,9 @@
 ---
 - name: set-hosts
   hosts: rpinas
-  #remote_user: ubuntu
-  #become: "True"
-  #become_method: sudo
+  remote_user: pete
+  become: "True"
+  become_method: sudo
 
 
 
