--- a/upgrade.yml
+++ b/upgrade.yml
@@ -1,7 +1,7 @@
 ---
 - name: Upgrade all hosts  
   hosts: all
-  #remote_user: pete
+  remote_user: pete
   become: "True"
   become_method: sudo
 
