--- a/upgrade.yml
+++ b/upgrade.yml
@@ -18,6 +18,7 @@
         update_cache: yes
         cache_valid_time: 3600
         upgrade: dist
+        autoremove: yes
       when: ansible_distribution == 'Ubuntu'  
 
     - name: Upgrade Ubuntu snaps
