--- a/roles/tvheadend/tasks/main.yml
+++ b/roles/tvheadend/tasks/main.yml
@@ -7,7 +7,7 @@
   apt_repository:
     repo: ppa:mamarley/tvheadend-git-stable
     state: present
-    update: yes
+    update_cache: yes
   when: ansible_distribution == 'Ubuntu'  
     
 - name: install tvheadend
