--- a/roles/tvheadend/tasks/main.yml
+++ b/roles/tvheadend/tasks/main.yml
@@ -15,6 +15,39 @@
     name: 
       - tvheadend
     state: present
+    
+ # need to also load the required firmware
+ 
+- name: Copy over firmware files
+  copy:
+    src: ~/ansible/roles/tvheadend/files/dvb-demod-si2168-02.fw
+    dst: /lib/firmware/dvb-demod-si2168-02.fw
+    owner: root
+    group: root
+    mode: '0644'
+    
+  copy:
+    src: ~/ansible/roles/tvheadend/files/dvb-demod-si2168-a30-01.fw
+    dst: /lib/firmware/dvb-demod-si2168-a30-01.fw
+    owner: root
+    group: root
+    mode: '0644' 
+  
+  copy:
+    src: ~/ansible/roles/tvheadend/files/dvb-demod-si2168-b40-01.fw
+    dst: /lib/firmware/dvb-demod-si2168-b40-01.fw
+    owner: root
+    group: root
+    mode: '0644' 
+  
+  copy:
+    src: ~/ansible/roles/tvheadend/files/dvb-tuner-si2158-a20-01.fw
+    dst: /lib/firmware/dvb-tuner-si2158-a20-01.fw
+    owner: root
+    group: root
+    mode: '0644' 
+  
+    
  
 - name: Start service tvheadend if not started
   service:
