--- a/ansible.cfg
+++ b/ansible.cfg
@@ -35,6 +35,7 @@ inventory = ~/ansible/hosts
 # implicit - gather by default, turn off with gather_facts: False
 # explicit - do not gather by default, must say gather_facts: True
 #gathering = implicit
+gathering=smart
 
 # This only affects the gathering done by a play's gather_facts directive,
 # by default gathering retrieves all facts subsets
