--- a/upgrade.yml
+++ b/upgrade.yml
@@ -1,6 +1,6 @@
 ---
 - name: Upgrade all hosts  
-  hosts: rpinas2
+  hosts: rpimesh
   remote_user: pete
   become: "True"
   become_method: sudo
@@ -13,13 +13,13 @@
         upgrade: yes
       when: ansible_distribution == 'Archlinux'  
       
-    - name: Upgrade Ubuntu hosts
+    - name: Upgrade Ubuntu and Raspbian hosts
       apt:
         update_cache: yes
         cache_valid_time: 3600
         upgrade: dist
         autoremove: yes
-      when: ansible_distribution == 'Ubuntu'  
+      when: ansible_distribution == 'Ubuntu' or  ansible_distribution == 'Raspbian'
 
     - name: Upgrade Ubuntu snaps
       command: snap refresh
