--- a/initial-setup.yml
+++ b/initial-setup.yml
@@ -1,7 +1,7 @@
 - name: Initial Setup
   ####################################
   #
-  # ansible-playbook -u USER -k -K initial-setup.yml
+  # ansible-playbook -v -u USER -k -K initial-setup.yml
   #
   ####################################
   
