--- a/roles/ntp-server/files/ntp.conf
+++ b/roles/ntp-server/files/ntp.conf
@@ -17,9 +17,11 @@ restrict ::1
 restrict 192.168.1.0 mask 255.255.255.0 nomodify notrap nopeer
 restrict 192.168.0.0 mask 255.255.255.0 nomodify notrap nopeer
 
+# check these interfaces are the right way round.
+# ignore the internet facing one
 interface listen lo
-interface listen eth1
-interface ignore eth0
+interface listen eth0
+interface ignore eth1
 
 
 # Location of drift file
