--- a/roles/netplan-eth0/tasks/main.yaml
+++ b/roles/netplan-eth0/tasks/main.yaml
@@ -1,1 +1,23 @@
+ - name: Copy over interface config files
+  copy:
+    src: ~/ansible/roles/netplan-eth0/files/10-eth0.yaml
+    dest: /etc/netplan/10-eth0.yaml
+    owner: root
+    group: root
+    mode: '0644'
+  register: interfaceconfigfiles
+   
+  
+- name: Restart service if files changed  
+  service:
+    name: networking
+    enabled: yes
+    state: restarted
+  when: interfaceconfigfiles.changed
  
+ 
+ 
+ 
+ 
+  tags:
+    - eth0
