--- a/roles/netplan-eth0/tasks/main.yaml
+++ b/roles/netplan-eth0/tasks/main.yaml
@@ -6,6 +6,7 @@
     group: root
     mode: '0644'
   register: interfaceconfigfiles
+  notify: netplan generate config
    
   
 - name: Restart service if files changed  
