--- a/roles/netplan-eth0/tasks/main.yaml
+++ b/roles/netplan-eth0/tasks/main.yaml
@@ -1,5 +1,23 @@
+ 
+  netplan_apply: True
+  
+  netplan_packages:
+    - nplan
+    - netplan.io
+  
+  - name: Install netplan
+    apt:
+      name: "{{ netplan_packages }}"
+      state: present
+    become: true
+    register: result
+    until: result is successful
+   
+ 
+ 
+ 
  - name: Copy over interface config files
-  copy:
+   copy:
     src: ~/ansible/roles/netplan-eth0/files/10-eth0.yaml
     dest: /etc/netplan/10-eth0.yaml
     owner: root
@@ -17,7 +35,7 @@
   when: interfaceconfigfiles.changed
  
  
- 
+
  
  
   tags:
