Update and rename roles/netplan-eth0/files/10-eth0.yaml to roles/netplan/files/10-eth0-gateway.yaml

--- a/roles/netplan/files/10-eth0-gateway.yaml
+++ b/roles/netplan/files/10-eth0-gateway.yaml
@@ -1,4 +1,4 @@
-# netplan configuration of Eth0 - static address
+# netplan configuration of Eth0 - static address for gateway device
 network:
   version: 2
   renderer: networkd
