--- a/roles/netplan/tasks/main.yaml
+++ b/roles/netplan/tasks/main.yaml
@@ -19,8 +19,8 @@
  - name: Copy over interface config files
    copy:
    when: ansible_facts['hostname'] == "gateway2"
-    src: ~/ansible/roles/netplan/files/10-eth0.yaml
-    dest: /etc/netplan/10-eth0.yaml
+    src: ~/ansible/roles/netplan/files/10-eth0-gateway.yaml
+    dest: /etc/netplan/10-eth0-gateway.yaml
     owner: root
     group: root
     mode: '0644'
