--- a/quick.yml
+++ b/quick.yml
@@ -1,6 +1,6 @@
 ---
 - name: quick role installer
-  hosts: rpinas2
+  hosts: gateway2
   remote_user: pete
   become: "True"
   become_method: sudo
@@ -8,6 +8,6 @@
   
 
   roles:
-    - mythtv
+    - netplan
    
   
