--- a/roles/netplan/handlers/main.yaml
+++ b/roles/netplan/handlers/main.yaml
@@ -8,4 +8,4 @@
 - name:       Applying Netplan Configuration
   command:    netplan apply
   listen:     netplan apply config
-  when:       netplan_apply
+  #when:       netplan_apply
