--- a/roles/netplan/tasks/main.yaml
+++ b/roles/netplan/tasks/main.yaml
@@ -18,6 +18,18 @@
   when: ansible_facts['hostname'] == "gateway2"  
   register: interfaceconfigfiles
   notify: netplan generate config
+  
+#copy gateway specific eth1 file
+- name: Copy over interface config files
+  copy:
+    src: ~/ansible/roles/netplan/files/20-eth1-dhcp.yaml
+    dest: /etc/netplan/20-eth1-dhcp.yaml
+    owner: root
+    group: root
+    mode: '0644'
+  when: ansible_facts['hostname'] == "gateway2"  
+  register: interfaceconfigfiles
+  notify: netplan generate config  
    
    
 # Copy over dhcp eth0 file   
@@ -28,7 +40,7 @@
     owner: root
     group: root
     mode: '0644'
-  when: ansible_facts['hostname'] == "gateway1"  
+  when: ansible_facts['hostname'] != "gateway2"  
   register: interfaceconfigfiles
   notify: netplan generate config  
   
