--- a/roles/ntp-server/files/ntp.conf
+++ b/roles/ntp-server/files/ntp.conf
@@ -1,8 +1,8 @@
 # Associate to Arch's NTP pool
-server 0.arch.pool.ntp.org iburst
-server 1.arch.pool.ntp.org iburst
-server 2.arch.pool.ntp.org iburst
-server 3.arch.pool.ntp.org iburst
+server 0.uk.pool.ntp.org iburst
+server 1.uk.pool.ntp.org iburst
+server 2.uk.pool.ntp.org iburst
+server 3.uk.pool.ntp.org iburst
 
 #be a server to the local network
 server 127.127.1.1
